# Uranium

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylint-ignore.dict  CMakeLists.txt  CPackConfig.cmake  Cura2Architecture.xmi  GitVersion.yml  Jenkinsfile  LibraryDir.py.in  README.md  Rakefile  conandata.yml  conanfile.py  conaninfo.txt  create_plugin.py  dox_2_rst.py  pylint.cfg  pytest.ini  requirements-dev.txt  requirements.txt  requirements2.txt  run_coverage.py  run_mypy.bat  run_mypy.py  run_tests.py  run_tests.sh
.github/workflows/: cicd.yml  codeql.yml  conan-package.yml  conan-recipe-version.yml  process-pull-request.yml  requirements-conan-package.txt  unit-test-post.yml  unit-test.yml  update-translation.yml
Cura/: Application.py  Backend.py  Command.py  Controller.py  Event.py  InputDevice.py  Logger.py  MeshData.py  MeshFileHandler.py  MeshReader.py  MeshWriter.py  Plugin.py  PluginError.py  PluginRegistry.py  Resources.py  SceneObject.py  Signal.py  Socket.py  StorageDevice.py  Tool.py  View.py
Cura/Backend/: Backend.py  Command.py  CommandFactory.py  Socket.py
Cura/Math/: AxisAlignedBox.py  Matrix.py  Quaternion.py  Vector.py  __init__.py
Cura/MeshHandling/: MeshData.py  MeshFileHandler.py  MeshReader.py  MeshWriter.py  Vertex.py
Cura/Qt/: ListModel.py  MainWindow.py  QtApplication.py  QtGL2Renderer.py  QtKeyDevice.py  QtMouseDevice.py  __init__.py
Cura/Scene/: BoxRenderer.py  Camera.py  MeshData.py  Platform.py  Scene.py  SceneNode.py  SceneObject.py  ToolHandle.py  __init__.py
Cura/Settings/: MachineSettings.py  Setting.py  SettingsCategory.py  __init__.py
Cura/View/: CameraControls.py  ClassicGLRenderer.py  GL2Renderer.py  Renderer.py  View.py
Cura/Wx/: Canvas.py  MainWindow.py  WxApplication.py
UM/: Application.py  BackendPlugin.py  Benchmark.py  CMakeLists.txt  CentralFileStorage.py  ColorGenerator.py  ColorImage.py  ConfigurationErrorMessage.py  Controller.py  Decorators.py  Dictionary.py  Event.py  Extension.py  FastConfigParser.py  FileProvider.py  FlameProfiler.py  InputDevice.py  Job.py  JobQueue.py  LoadWorkspaceJob.py  LockFile.py  Logger.py  Message.py  MimeTypeDatabase.py  OS.py  PackageManager.py  Platform.py  PluginError.py  PluginObject.py  PluginRegistry.py  Preferences.py  Resources.py  SaveFile.py  Signal.py  SortedList.py  Stage.py  StorageDevice.py  SystemTrayController.py  Tool.py  Transformations.py~  (+10 more)
UM/Backend/: Backend.py  BackendManager.py  BackendOutputHandler.py  BackendOutputWriter.py  CMakeLists.txt  Command.py  OutputHandler.py  OutputWriter.py  SignalSocket.py  Socket.py  SocketThread.py  WriteBackendJob.py  WriteBackendOutputJob.py  __init__.py
UM/FileHandler/: FileHandler.py  FileManager.py  FileReader.py  FileWriter.py  ReadFileJob.py  WriteFileJob.py  WriteJob.py
UM/Logging/: ConsoleLogger.py  FileLogger.py  Logger.py
UM/Math/: AxisAlignedBox.py  AxisAlignedBox2D.py  CMakeLists.txt  Color.py  Float.py  LineSegment.py  Matrix.py  NumPyUtil.py  Plane.py  Polygon.py  Quaternion.py  Ray.py  ShapelyUtil.py  Vector.py  Vector2.py  __init__.py
UM/Mesh/: CMakeLists.txt  LoadMeshJob.py  MeshBuilder.py  MeshData.py  MeshData2.py  MeshFileHandler.py  MeshManager.py  MeshReader.py  MeshWriter.py  ReadMeshJob.py  Vertex.py  WriteMeshJob.py  __init__.py
UM/MeshHandling/: MeshData.py  MeshFileHandler.py  __init__.py
UM/MeshReaders/: OBJReader.py  STLReader.py
UM/Operations/: AddMeshOperation.py  AddSceneNodeOperation.py  CMakeLists.txt  GravityOperation.py  GroupedOperation.py  LayFlatOperation.py  MirrorOperation.py  Operation.py  OperationStack.py  RemoveSceneNodeOperation.py  RemoveSceneNodesOperation.py  RotateOperation.py  ScaleOperation.py  ScaleToBoundsOperation.py  SetTransformOperation.py  TranslateOperation.py  __init__.py
UM/OutputDevice/: CMakeLists.txt  OutputDevice.py  OutputDeviceError.py  OutputDeviceManager.py  OutputDevicePlugin.py  OutputSubject.py  (+1 more)
cmake/: StandardProjectSettings.cmake  UraniumPluginInstall.cmake  UraniumTests.cmake  UraniumTranslationTools.cmake
docker/: build.sh
docs/: Building.md  Developing.md  HttpNetworkManager.drawio  Packaging.md  System Requirements.md  UraniumArchitecture.xmi  centralfilestorage.md  config  mainpage.md  overview.md  plugins.md  rendering.md  translations.md  versionupgrade.md
plugins/: CMakeLists.txt  ExamplePlugin.py
resources/: CMakeLists.txt  bundled_packages.json
scanner/: CalibrationButton.qml  CalibrationDialog.qml  CameraImageProvider.py  NextButton.qml  Scanner.qml  ScannerApplication.py  ScannerWindow.qml  SettingsPane.qml  ToolBarButtonStyleScan.qml  Toolbar.qml  ToolbarProxy.py  WizardButton.qml  WizardPane.qml  WizardSetup1.qml  WizardSetup10.qml  WizardSetup11.qml  WizardSetup12.qml  WizardSetup13.qml  WizardSetup15.qml  WizardSetup2.qml  WizardSetup3.qml  WizardSetup4.qml  WizardSetup5.qml  WizardSetup6.qml  WizardSetup7.qml  WizardSetup8.qml  WizardSetup9.qml  scanner.py
scripts/: CMakeLists.txt  ECMPoQmTools.cmake  compile-shaders  createjsoncontext.py  createkeypair.py  createplugincontext.py  extract-all  extract-json  extract-messages  extract-python  extract-tr-strings  pep8_check.py  pirate.po  pirate.py  pirateofdoom.py  signfile.py  signfolder.py
stubs/: Arcus.pyi  _dummy_thread.pyi  sip.pyi
test_package/: conanfile.py  test.py
tests/: TestBackend.py  TestCentralFileStorage.py  TestColor.py  TestContainerPropertyProvider.py  TestController.py  TestDecorators.py  TestDepthFirstDecorator.py  TestDictionary.py  TestDuration.py  TestExtension.py  TestFileHandler.py  TestFileWriter.py  TestListModel.py  TestMessage.py  TestOpenGLContext.py  TestOutputDevice.py  TestOutputDeviceManager.py  TestPackageManager.py  TestPluginObject.py  TestPreferences.py  TestQtRenderer.py  TestRenderBatch.py  TestRenderer.py  TestResources.py  TestShaderProgram.py  TestSignals.py  TestSortedList.py  TestSortedListModulo.py  TestStage.py  TestTheme.py  TestToolHandle.py  TestTools.py  TestTrust.py  TestUrlUtil.py  TestUtil.py  TestVersion.py  TestWorkspaceMetadataStorage.py  UnitTestPackage.package  conftest.py  latest.json  (+2 more)
(+748 files in other folders)
